Wed Apr 19 08:52:37 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* client.c (send_repository): Check for CVSADM_ENTSTAT in `dir', not
	in `.'.

	* sanity.sh: Add TODO list.  Revise some comments.  Add tests of
	one working directory adding a file and other updating it.

Sat Apr  8 14:52:55 1995  Jim Blandy  <jimb@totoro.bio.indiana.edu>

	* Makefile.in (CFLAGS): Let configure set the default for CFLAGS.
	Under GCC, we want -g -O.

Fri Apr  7 15:49:25 1995  J.T. Conklin  <jtc@rtl.cygnus.com>

	* root.c (Name_Root): merge identical adjacent conditionals.

	* create_admin.c (Create_Admin): Rearranged check for CVSADM and
	  OCVSADM directories so that CVSADM pathname is only built once.

	* update.c (update_dirleave_proc): Removed code to remove CVS
	  administration directory if command_name == "export" and to
	  create CVS/Root file if it is not present.  Identical code
	  in update_filesdone_proc() will perform these same actions.
	  Also removed code that read and verfied CVS/Root.  This is
	  expensive, and if it is necessary should happen in the 
	  general recursion processor rather than in the update
	  callbacks.

	* lock.c (masterlock): New variable, pathname of master lockdir.
	  (set_lock): removed lockdir argument, now constructs it itself
	  and stores it in masterlock.
	  (clear_lock): new function, removes master lockdir.
	  (Reader_Lock, write_lock): call clear_lock instead of removing
	  master lockdir.
	  (Reader_Lock, write_lock): #ifdef'd out CVSTFL code.

	* main.c (main): register Lock_Cleanup signal handler.
	* lock.c (Reader_Lock, write_lock): no longer register
	  Lock_Cleanup.

	* main.c (main): initialize new array hostname.
	* lock.c (Reader_Lock, write_lock): Use global hostname array.
	* logmsg.c (logfile_write): Likewise.

	* recurse.c (do_dir_proc, unroll_files_proc): Use open()/fchdir()
	  instead of getwd()/chdir() on systems that support the fchdir()
	  system call.
